# morph

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  bridge_architecture.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: FindQt.cmake  clang-cl-toolchain.cmake  compiler_options.cmake  gnu-toolchain.cmake  llvm-toolchain.cmake  msan.supp  msvc-toolchain.cmake  valgrind.supp
docs/: ARCHITECTURE.md
include/async_framework/: backend.hpp  bridge.hpp  completion.hpp  executor.hpp  logger.hpp  model.hpp  network_monitor.hpp  offline_queue.hpp  registry.hpp  remote.hpp  strand.hpp  sync_worker.hpp  task.hpp
include/async_framework/qt/: qt_executor.hpp  qt_websocket_backend.hpp  qt_websocket_server.hpp
scripts/: coverage.sh
src/: main.cpp
src/qt/: qt_websocket_backend.cpp  qt_websocket_server.cpp
tests/: .clang-tidy  CMakeLists.txt  test_backend_extra.cpp  test_bridge_local.cpp  test_bridge_remote.cpp  test_completion.cpp  test_completion_branches.cpp  test_completion_extra.cpp  test_concurrency_invariants.cpp  test_conflict_resolution.cpp  test_dispatch_di.cpp  test_executor.cpp  test_executor_extra.cpp  test_handler_binding.cpp  test_issues.cpp  test_logger.cpp  test_model.cpp  test_network_monitor.cpp  test_offline_integration.cpp  test_offline_queue.cpp  test_registry_extra.cpp  test_remote_extra.cpp  test_strand.cpp  test_strand_extra.cpp  test_switch_backend.cpp  test_sync_worker.cpp  test_task.cpp
tests/certs/: server.crt  server.key
tests/qt/: CMakeLists.txt  qt_test_client_main.cpp  qt_test_models.hpp  qt_test_server_main.cpp  test_qt_websocket.cpp
